[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Square.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("titulo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 262, -61 ), Vector2( 262, 115 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("botones/play:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("botones/settings:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("botones/creditos:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("botones/quit:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 7.0
margin_bottom = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="fondo" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo" type="RichTextLabel" parent="."]
margin_left = 262.0
margin_top = -61.0
margin_right = 762.0
margin_bottom = 14.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]BOLITA GIRATORIA[/center]"
text = "BOLITA GIRATORIA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -74, 167 )
scale = Vector2( 0.04975, 0.04975 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 4 )

[node name="botones" type="CanvasLayer" parent="."]

[node name="play" type="Button" parent="botones"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 282.0
margin_top = 274.0
margin_right = 482.0
margin_bottom = 349.0
custom_fonts/font = SubResource( 1 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="botones"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 282.0
margin_top = 376.0
margin_right = 482.0
margin_bottom = 451.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditos" type="Button" parent="botones"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 538.0
margin_top = 274.0
margin_right = 738.0
margin_bottom = 349.0
custom_fonts/font = SubResource( 1 )
text = "creditos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="botones"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 538.0
margin_top = 376.0
margin_right = 738.0
margin_bottom = 451.0
custom_fonts/font = SubResource( 1 )
text = "salir"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="botones/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="botones/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="botones/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="botones/quit" to="." method="_on_quit_pressed"]
